java 11 fixes
Signed-off-by: Vamsi Manohar <reddyvam@amazon.com>